complete auth and fix overlap types

--- a/src/components/form/login/LoginForm.module.css
+++ b/src/components/form/login/LoginForm.module.css
@@ -61,7 +61,7 @@
   border-radius: 0.375rem;
   /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); */
 }
-input::placeholder {
+.input::placeholder {
   color: var(--secondary-color);
 }
 .input:focus {
